--- a/sass/css.css
+++ b/sass/css.css
@@ -1402,6 +1402,12 @@ label.panel-label {
     width: auto;
   }
 }
+.login-wrapper {
+  padding-top: 100px;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
 .footer {
   margin-top: 50px;
   padding-top: 20px;
