--- a/sass/agenda.scss
+++ b/sass/agenda.scss
@@ -45,47 +45,11 @@
     }
 }
 
-#panel-1 {
-    .agenda-content {
-        a {
-            pointer-events: none;
-        }
+#panels {
+    a {
+        pointer-events: none;
     }
 }
-
-#panel-2 {
-    .agenda-content {
-        a {
-            pointer-events: none;
-        }
-    }
-}
-
-#panel-3 {
-    .agenda-content {
-        a {
-            pointer-events: none;
-        }
-    }
-}
-
-#panel-4 {
-    .agenda-content {
-        a {
-            pointer-events: none;
-        }
-    }
-}
-
-#panel-5 {
-    .agenda-content {
-        a {
-            pointer-events: none;
-        }
-    }
-}
-
-
 
 .agenda-single {
     max-width: 900px;
